// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LayoutContainer should render correctly in dark 1`] = `
<RCTSafeAreaView
  style={
    {
      "backgroundColor": "#111111",
      "flex": 1,
    }
  }
>
  <RCTScrollView
    collapsable={false}
    entering={[Function]}
    forwardedRef={[Function]}
    jestAnimatedStyle={
      {
        "value": {},
      }
    }
    keyboardShouldPersistTaps="handled"
    scrollEventThrottle={1}
    style={
      {
        "height": "100%",
        "paddingBottom": 90,
        "paddingHorizontal": 24,
        "paddingTop": 25,
      }
    }
  >
    <View>
      <Text
        style={
          [
            {
              "color": "white",
              "fontFamily": "SFProText-Regular",
              "fontSize": 18,
            },
            false,
            {
              "textAlign": "left",
            },
            {
              "lineHeight": 27,
            },
          ]
        }
      >
        Sample Text
      </Text>
    </View>
  </RCTScrollView>
</RCTSafeAreaView>
`;

exports[`LayoutContainer should render correctly in dark 2`] = `
<RCTSafeAreaView
  style={
    {
      "backgroundColor": "white",
      "flex": 1,
    }
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessible={false}
    collapsable={false}
    entering={[Function]}
    focusable={true}
    jestAnimatedStyle={
      {
        "value": {},
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "height": "100%",
        "paddingBottom": 90,
        "paddingHorizontal": 24,
        "paddingTop": 25,
      }
    }
  >
    <Text
      style={
        [
          {
            "color": "black",
            "fontFamily": "SFProText-Regular",
            "fontSize": 18,
          },
          false,
          {
            "textAlign": "left",
          },
          {
            "lineHeight": 27,
          },
        ]
      }
    >
      Sample Text
    </Text>
  </View>
</RCTSafeAreaView>
`;

exports[`LayoutContainer should render correctly in light 1`] = `
<RCTSafeAreaView
  style={
    {
      "backgroundColor": "#111111",
      "flex": 1,
    }
  }
>
  <RCTScrollView
    collapsable={false}
    entering={[Function]}
    forwardedRef={[Function]}
    jestAnimatedStyle={
      {
        "value": {},
      }
    }
    keyboardShouldPersistTaps="handled"
    scrollEventThrottle={1}
    style={
      {
        "height": "100%",
        "paddingBottom": 90,
        "paddingHorizontal": 24,
        "paddingTop": 25,
      }
    }
  >
    <View>
      <Text
        style={
          [
            {
              "color": "white",
              "fontFamily": "SFProText-Regular",
              "fontSize": 18,
            },
            false,
            {
              "textAlign": "left",
            },
            {
              "lineHeight": 27,
            },
          ]
        }
      >
        Sample Text
      </Text>
    </View>
  </RCTScrollView>
</RCTSafeAreaView>
`;

exports[`LayoutContainer should render correctly in light 2`] = `
<RCTSafeAreaView
  style={
    {
      "backgroundColor": "white",
      "flex": 1,
    }
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessible={false}
    collapsable={false}
    entering={[Function]}
    focusable={true}
    jestAnimatedStyle={
      {
        "value": {},
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "height": "100%",
        "paddingBottom": 90,
        "paddingHorizontal": 24,
        "paddingTop": 25,
      }
    }
  >
    <Text
      style={
        [
          {
            "color": "black",
            "fontFamily": "SFProText-Regular",
            "fontSize": 18,
          },
          false,
          {
            "textAlign": "left",
          },
          {
            "lineHeight": 27,
          },
        ]
      }
    >
      Sample Text
    </Text>
  </View>
</RCTSafeAreaView>
`;
